--- a/diseño.css
+++ b/diseño.css
@@ -262,9 +262,11 @@ footer {
     padding: 10px 0;
     position: relative;
     width: 100%;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
+    top:100%;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente el contenido */
+    align-items: center; /* Centra verticalmente el contenido */
+    gap: 10px; /* Espacio entre el texto y el logo */
 }
 
 .instagram-logo {
