--- a/diseño2.css
+++ b/diseño2.css
@@ -237,9 +237,11 @@ footer {
     padding: 10px 0;
     position: relative;
     width: 100%;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
+    top:100%;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente el contenido */
+    align-items: center; /* Centra verticalmente el contenido */
+    gap: 10px; /* Espacio entre el texto y el logo */
 }
 .instagram-logo {
     width: 40px; /* Ajusta el tamaño del logo */
